# tetris-rl-bot

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
scripts/: capture_reference.py  print_state.py
src/tetris_bot/interface/: browser.py  calibration.py  capture.py  vision.py
